--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
     <version>1.509.1</version><!-- which version of Jenkins is this plugin built against? -->
   </parent>
 
-  <groupId>org.jenkins-ci.plugins</groupId>
-  <artifactId>customartifactbuilder</artifactId>
+  <groupId>com.puppetlabs.jenkins.plugins</groupId>
+  <artifactId>puppetgatlingjenkinsplugin</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>hpi</packaging>
 
@@ -46,16 +46,6 @@
                     <artifactId>log4j</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>ant</groupId>
-            <artifactId>ant-junit</artifactId>
-            <version>1.6.5</version>
-            <scope>system</scope>
-            <systemPath>
-                ${local.repo.path}/localant/ant-filesystem-tasks/0.0.2/ant-filesystem-tasks-0.0.2.jar
-            </systemPath>
         </dependency>
 
         <dependency>
