--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>1.509.1</version><!-- which version of Jenkins is this plugin built against? -->
+        <version>2.3</version><!-- which version of Jenkins is this plugin built against? -->
     </parent>
 
-    <groupId>com.puppetlabs.jenkins.plugins</groupId>
+    <groupId>puppetlabs</groupId>
     <artifactId>puppet-gatling-jenkins-plugin</artifactId>
-    <version>0.9.5-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
 
     <!-- get every artifact through repo.jenkins-ci.org, which proxies all the artifacts that we need -->
@@ -19,19 +19,6 @@
         </repository>
     </repositories>
 
-    <distributionManagement>
-        <repository>
-            <id>deployment</id>
-            <name>Internal Releases</name>
-            <url>http://nexus.delivery.puppetlabs.net:8081/content/repositories/releases/</url>
-        </repository>
-        <snapshotRepository>
-            <id>deployment</id>
-            <name>Internal Releases</name>
-            <url>http://nexus.delivery.puppetlabs.net:8081/content/repositories/snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
-
     <pluginRepositories>
         <pluginRepository>
             <id>repo.jenkins-ci.org</id>
@@ -39,40 +26,11 @@
         </pluginRepository>
     </pluginRepositories>
 
-    <properties>
-        <!--
-          explicitly specifying the latest version here because one we get from the parent POM
-          tends to lag behind a bit
-        -->
-        <maven-hpi-plugin.version>1.95</maven-hpi-plugin.version>
-        <local.repo.path>${basedir}/localRepository</local.repo.path>
-    </properties>
-
     <dependencies>
-
-        <dependency>
-            <groupId>org.jenkins-ci.main</groupId>
-            <artifactId>maven-plugin</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>log4j</groupId>
-                    <artifactId>log4j</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>1.3.2</version>
-        </dependency>
-
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>gatling</artifactId>
-            <version>1.0.3</version>
+            <version>1.2.0</version>
         </dependency>
-
     </dependencies>
-
 </project>
