--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,20 @@
     <version>2.0.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
 
+     <!--this setup will allow us to deploy to private nexus -->
+    <distributionManagement>
+      <snapshotRepository>
+        <id>pl-nexus-snapshots</id>
+        <name>PL Nexus Snapshots</name>
+        <url>http://nexus.delivery.puppetlabs.net/content/repositories/snapshots/</url>
+      </snapshotRepository>
+      <repository>
+        <id>pl-nexus-releases</id>
+        <name>PL Nexus Releases</name>
+        <url>http://nexus.delivery.puppetlabs.net/content/repositories/releases/</url>
+      </repository>
+    </distributionManagement>
+
     <!-- get every artifact through repo.jenkins-ci.org, which proxies all the artifacts that we need -->
     <repositories>
         <repository>
