--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>puppetlabs</groupId>
     <artifactId>puppet-gatling-jenkins-plugin</artifactId>
-    <version>2.1.0</version>
+    <version>2.1.1-SNAPSHOT</version>
     <packaging>hpi</packaging>
 
      <!--this setup will allow us to deploy to private nexus -->
